Update description strings in plugin create command.

--- a/templates/plugin/gemspec.erb
+++ b/templates/plugin/gemspec.erb
@@ -8,7 +8,7 @@ Gem::Specification.new do |spec|
   spec.version       = Busser::<%= config[:klass_name] %>::VERSION
   spec.authors       = ['<%= config[:author] %>']
   spec.email         = ['<%= config[:email] %>']
-  spec.description   = %q{<%= config[:klass_name] %> runner plugin for Busser}
+  spec.description   = %q{A Busser <%= config[:type] %> plugin for <%= config[:klass_name] %>}
   spec.summary       = spec.description
   spec.homepage      = ''
   spec.license       = '<%= config[:license_string] %>'
