--- a/templates/plugin/runner_plugin.rb.erb
+++ b/templates/plugin/runner_plugin.rb.erb
@@ -4,7 +4,7 @@
 
 require 'busser/runner_plugin'
 
-# <%= config[:klass_name] %> runner plugin for Busser
+# A Busser <%= config[:type] %> plugin for <%= config[:klass_name] %>.
 #
 # @author <%= config[:author] %> <<%= config[:email] %>>
 #
